<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoachesRaceTimer</string>
    <string name="hello_world">Hello world!</string>
    <string name="event_1_string">Event 1</string>
    <string name="event_2_string">Event 2</string>
    <string name="title_activity_convert">ConvertActivity</string>
    <string name="StartButton">Start</string>
    <string name="StopButton">Stop</string>
    <string name="RaceTimerButton">Race Timer</string>
    <string name="DualTimerButton">Dual Timer</string>
    <string name="FieldEventsButton">Field Events</string>
    <string name="UploadResultsButton">Upload Results</string>
    <string name="event1_text">Event 1</string>
    <string name="event2_text">Event 2</string>
    <string name="default_time">0:00:00.000</string>
    <string name="convert_text">Convert!</string>
    <string name="title_activity_dual_timer">DualTimerActivity</string>
    <string name="start_lap">Start/Lap</string>
    <string name="stop_reset">Stop/Reset</string>
    <string name="race_timer">Race Timer</string>
    <string name="dual_timer">Dual Timer</string>
    <string name="convert_events">Convert Events</string>
    <string name="upload_results">Upload Results</string>
    <string name="add_athlete">Add Athlete</string>
    <string name="title_activity_new_athlete">NewAthleteActivity</string>
    <string name="athlete_name">Athlete Name</string>
    <string name="create_new_athlete">Create New Athlete</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="athlete_ranking">Athlete Ranking</string>
    <string name="add_athlete_to_team">Add Athlete to Team</string>
    <string name="team_ranking">Team Ranking</string>
    <string name="title_activity_athletes_view">AthletesView</string>
    <string name="manage_athletes">Manage Athletes</string>
    <string name="add_dialog_title">Add a new athlete</string>
    <string name="last">Last</string>
    <string name="first">First</string>
    <string name="athlete_first_name">Athlete First Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="athlete_last_name">Athlete Last Name</string>
    <string name="choose_an_event_">Choose An Event...</string>
    <string name="timeSeparator1">:</string>
    <string name="timeSeparator2">.</string>
    <string name="defaultTimeString1">00</string>
    <string name="defaultTimeString2">000</string>
    <string name="save_race_">Save Race...</string>
    <string name="save_race_to_device">Save Race to Device</string>
    <string name="add_new_athlete_to_team_">Add New Athlete To Team...</string>

</resources>