<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/track"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:text="@string/default_time"
        android:textAlignment="center"
        android:textColor="@color/main_time"
        android:textSize="72sp" />

    <LinearLayout
        android:id="@+id/startStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/StartButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/StartButton" />

        <Button
            android:id="@+id/StopButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:text="@string/StopButton" />
    </LinearLayout>

    <Button
        android:id="@+id/addAthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startStop"
        android:layout_centerHorizontal="true"
        android:text="@string/add_athlete" />

    <ListView
        android:id="@+id/athleteList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/addAthButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView1" />
</RelativeLayout>