<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1" >

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
	<TextView 
	    android:id="@+id/event1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/event1_text" />

	<ListView
	    android:id="@+id/listView1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/time1"
	    android:layout_below="@id/event1"
	    android:layout_weight="1"
	    tools:context=".ConvertActivity" >
		
	</ListView>"
	<Space 
	    android:layout_below="@id/time1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />

	<EditText
	    android:id="@+id/time1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_weight="2"
	    android:hint="@string/default_time"
	    android:inputType="datetime" />

	</RelativeLayout>

	<RelativeLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
	<TextView 
	    android:id="@+id/event2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/event2_text" />

	<ListView
	    android:id="@+id/listView2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/time2"
	    android:layout_below="@id/event2"
	    tools:context=".ConvertActivity" >

	    
	</ListView>
	<Space 
	    android:layout_below="@id/time2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />

	<TextView
	    android:id="@+id/time2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:text="@string/default_time" />

	</RelativeLayout>
    
</LinearLayout>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
	<Button 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/convert_text"/>
    
</LinearLayout>
</LinearLayout>
