<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
	<TextView 
	    android:id="@+id/event1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/default_time"
	    android:textSize="30sp" />
		<Button
	    android:id="@+id/stop1"
	    android:text="@string/stop_reset"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true" />
	<Button
	    android:id="@+id/start1"
		android:layout_above="@id/stop1"
	    android:text="@string/start_lap"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
	<ListView
	    android:id="@+id/listView1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/event1"
	    android:layout_above="@id/start1"
	    tools:context=".ConvertActivity" >
	</ListView>




	</RelativeLayout>

	<RelativeLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
	<TextView 
	    android:id="@+id/event2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/default_time"
	    android:textSize="30sp" />
	<Button
	    android:id="@+id/stop2"
	    android:text="@string/stop_reset"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true" />
	<Button
	    android:id="@+id/start2"
	    android:layout_above="@id/stop2"
	    android:text="@string/start_lap"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
	<ListView
	    android:id="@+id/listView2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/event2"
	    android:layout_above="@id/start2"
	    tools:context=".ConvertActivity" >
	</ListView>
	


	</RelativeLayout>
    
</LinearLayout>
